# swagger.yaml
@@ -208,20 +208,24 @@ paths:
         200:
           description: Update SLIs
 
-  /service-level-objective/{product}/reports:
+  /service-level-objectives/{product}/reports:
     get:
       tags: [SLO]
       operationId: app.handler.report.get_slo_report
       parameters:
         - $ref: '#/parameters/Product'
-        - name: from
+        - name: relative_from
           in: query
           type: string
+          format: date
           required: false
-        - name: to
+          description: The date from which the report should be generated
+        - name: relative_to
           in: query
-          type: string
           required: false
+          type: string
+          format: date
+          description: The date upto which the report should be generated
       responses:
         200:
           description: Return report data
